Fix: Custom background color overflows with the Image Card block

--- a/src/blocks/image-card/styles/editor.scss
+++ b/src/blocks/image-card/styles/editor.scss
@@ -1,4 +1,6 @@
 .editor-block-list__block[data-type="coblocks/image-card"] {
+	background: transparent !important;
+	
 	.has-no-image {
 		height: 70vw;
 		max-height: 700px;
